--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "packages": "^0.0.8",
     "save": "^2.4.0",
